--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -9,17 +9,17 @@
           <label for="exportType">Export Type</label>
           <select class="form-control export-type" id="exportType">
             <option disabled selected>Select...</option>
-            <optgroup label="Convex Hull Details">
-              <option value="detailsCurrent">Current Viewing</option>
-              <option disabled value="detailsAllSingle"
+            <optgroup label="Group by Viewing">
+              <option value="viewingsCurrent">Current Viewing</option>
+              <option disabled value="viewingsAllSingle"
                 >All Viewings in Analysis - Single File</option
               >
-              <option value="detailsAllIndividual"
+              <option value="viewingsAllIndividual"
                 >All Viewings in Analysis - Individual Files</option
               >
             </optgroup>
-            <optgroup label="Convex Hull Summary">
-              <option disabled value="summaryStats"
+            <optgroup label="Group by Participant">
+              <option value="participantsAll"
                 >Summary Stats with Participant Variables</option
               >
             </optgroup>
