before messing with traces

--- a/client/pages/viewings/Viewings.html
+++ b/client/pages/viewings/Viewings.html
@@ -81,7 +81,7 @@
           </tr>
           <tr>
             <th>Fixation Count (Frequency):</th>
-            <td class="p-l-10">{{ viewing.gazepointCount }}</td>
+            <td class="p-l-10">{{ viewing.fixationCount }}</td>
             <td>({{formatNumber viewing.fixationFrequency}}/sec)</td>
           </tr>
         </table>
