--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -36,7 +36,7 @@
           Stimuli
         </th>
         <th>
-          Viewings
+          Glances
         </th>
         <th>
           Status
@@ -61,8 +61,8 @@
           {{ analysis.stimuli.count }}
         </td>
         <td>
-          {{#if analysis.viewingCount}}
-          {{ formatNumber analysis.viewingCount }}
+          {{#if analysis.glanceCount}}
+          {{ formatNumber analysis.glanceCount }}
           {{/if}}
         </td>
         <td>
