--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -8,8 +8,8 @@
         class="update-analysis-form"}}
         {{> afQuickField name="name"}}
         {{> afQuickField name="desc"}}
-        {{> afQuickField name="viewingGap"}}
-        {{> afQuickField name="minViewingTime"}}
+        {{> afQuickField name="glanceGap"}}
+        {{> afQuickField name="minGlanceTime"}}
         <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
         {{> afQuickField name="ignoreOutsideImage"}}
         {{> afQuickField name="studyId"}}
