--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -9,15 +9,15 @@
           <label for="exportType">Export Type</label>
           <select class="form-control export-type" id="exportType">
             <option disabled selected>Select...</option>
-            <optgroup label="Group by Viewing">
-              <option value="viewingsCurrent">Current Viewing</option>
-              {{!-- <option disabled value="viewingsAllSingle"
-                >All Viewings in Analysis - Single File</option
+            <optgroup label="Group by Glance">
+              <option value="glancesCurrent">Current Glance</option>
+              {{!-- <option disabled value="glancesAllSingle"
+                >All Glances in Analysis - Single File</option
               > --}}
-              <option value="viewingsIndividualZip"
-                >All Viewings in Analysis - Individual Files</option
+              <option value="glancesIndividualZip"
+                >All Glances in Analysis - Individual Files</option
               >
-              <option value="viewingsSummary">
+              <option value="glancesSummary">
                 Summary Stats with Participant Variables
               </option>
             </optgroup>
