--- a/client/pages/viewings/NewViewing.html
+++ b/client/pages/viewings/NewViewing.html
@@ -1,11 +1,11 @@
-<template name="NewViewing">
+<template name="NewGlance">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">New Viewing <i class="fa fa-close pull-right"></i></h3>
+      <h3 class="panel-title">New Glance <i class="fa fa-close pull-right"></i></h3>
     </div>
     <div class="panel-body">
-      {{> quickForm collection="Viewings" id="insertViewingForm" type="insert"
-        class="insert-viewing-form"}}
+      {{> quickForm collection="Glances" id="insertGlanceForm" type="insert"
+        class="insert-glance-form"}}
     </div>
   </div>
 </template>
