--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -20,7 +20,7 @@
 
     {{#if equals analysis.status 'processing'}}
     <span class="label label-default"
-      >Creating Viewings {{formatNumber analysis.jobsProgress}}%<i
+      >Creating Glances {{formatNumber analysis.jobsProgress}}%<i
         class="fa fa-spinner fa-pulse fa-fw m-l-3"
       ></i
     ></span>
@@ -29,16 +29,16 @@
 
   <p>{{ analysis.desc }}</p>
 
-  {{#if analysis.viewingGap}}
+  {{#if analysis.glanceGap}}
   <div>
-    <strong>Viewing Gap (ms):</strong> {{formatNumber analysis.viewingGap}}
+    <strong>Glance Gap (ms):</strong> {{formatNumber analysis.glanceGap}}
   </div>
   {{/if}}
 
-  {{#if analysis.minViewingTime}}
+  {{#if analysis.minGlanceTime}}
   <div>
-    <strong>Minimum Viewing Time (ms):</strong>
-    {{formatNumber analysis.minViewingTime}}
+    <strong>Minimum Glance Time (ms):</strong>
+    {{formatNumber analysis.minGlanceTime}}
   </div>
   {{/if}}
 
@@ -84,7 +84,7 @@
     </h4>
   </div>
 
-  {{#if viewings.count}}
+  {{#if glances.count}}
   <!-- <div class="row">
         <div class="col-md-6">
           {{> PlotRegression}}
@@ -92,33 +92,33 @@
       </div> -->
   <div class="row">
     <div class="col-md-6">
-      {{> PlotHistogramViewingDurations viewings=viewings}}
+      {{> PlotHistogramGlanceDurations glances=glances}}
     </div>
     <div class="col-md-6">
-      {{> PlotHistogramViewingCounts viewings=viewings}}
+      {{> PlotHistogramGlanceCounts glances=glances}}
     </div>
   </div>
   <!-- <div class="row">
         <div class="col-md-6">
-          {{> PlotHistogramViewingAverageSlideHullCoverages viewings=viewings}}
+          {{> PlotHistogramGlanceAverageSlideHullCoverages glances=glances}}
         </div>
       </div> -->
   {{/if}}
 
-  {{#if viewings.count}}
+  {{#if glances.count}}
   <h4>
-    Viewings ({{ viewings.count }})
+    Glances ({{ glances.count }})
 
     {{#unless analysis.allJobsCompleted}}
     <span class="label label-default"
-      >Creating Viewings {{formatNumber analysis.jobsProgress}}%<i
+      >Creating Glances {{formatNumber analysis.jobsProgress}}%<i
         class="fa fa-spinner fa-pulse fa-fw m-l-3"
       ></i
     ></span>
     {{/unless}}
   </h4>
 
-  {{> tabular table=TabularTables.ViewingsByAnalysisId selector=selector class="table table-striped table-bordered"}}
+  {{> tabular table=TabularTables.GlancesByAnalysisId selector=selector class="table table-striped table-bordered"}}
   {{/if}}
   {{/if}}
 </template>
