--- a/client/pages/viewings/ViewingAnimation.html
+++ b/client/pages/viewings/ViewingAnimation.html
@@ -1,5 +1,5 @@
-<template name="ViewingAnimation">
-  {{#if viewing}}
+<template name="GlanceAnimation">
+  {{#if glance}}
     {{#if hullseries}}
       {{> Animation layout=layout initialTraces=initialTraces frameSeries=hullseries}}
     {{else}}
@@ -7,13 +7,13 @@
         {{#unless stimulusfile}}
           <div>
             <span class="label label-danger"
-              >No stimulus image associated with {{ viewing.stimulus.name }}</span
+              >No stimulus image associated with {{ glance.stimulus.name }}</span
             >
           </div>
           <div class="m-t-5">
             <a
-              href="/studies/{{ viewing.stimulus.studyId }}/stimuli/{{viewing.stimulus._id}}"
-              >{{ viewing.stimulus.name }}</a
+              href="/studies/{{ glance.stimulus.studyId }}/stimuli/{{glance.stimulus._id}}"
+              >{{ glance.stimulus.name }}</a
             >
           </div>
         {{/unless}}
