rename glance variables and reorder

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -30,10 +30,10 @@
           Name
         </th>
         <th>
-          Minimum Glance Time (ms)
+          Minimum Glance Duration (ms)
         </th>
         <th>
-          Glance Gap (ms)
+          Maximum Glance Gap Duration (ms)
         </th>
         <th>
           Participants
