--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -1,28 +1,29 @@
 <template name="UpdateAnalysis">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Edit Analysis <i class="fa fa-close pull-right"></i></h3>
+      <h3 class="panel-title">
+        Edit Analysis <i class="fa fa-close pull-right"></i>
+      </h3>
     </div>
     <div class="panel-body">
       {{#autoForm collection="Analyses" doc=analysis id="updateAnalysisForm" type="update"
         class="update-analysis-form"}}
-        {{> afQuickField name="name"}}
-        {{> afQuickField name="desc"}}
-        {{> afQuickField name="glanceGap"}}
-        {{> afQuickField name="minGlanceTime"}}
-        <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
-        {{> afQuickField name="ignoreOutsideImage"}}
-        {{> afQuickField name="studyId"}}
-        {{> afQuickField name="participantIds" options=participantOptions value=analysis.participantIds}}
-        {{> afQuickField name="stimulusIds" options=stimulusOptions value=analysis.stimulusIds}}
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+      {{> afQuickField name="name"}}
+      {{> afQuickField name="desc"}}
+      {{> afQuickField name="minGlanceTime"}}
+      {{> afQuickField name="glanceGap"}}
+      <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
+      {{> afQuickField name="ignoreOutsideImage"}}
+      {{> afQuickField name="studyId"}}
+      {{> afQuickField name="participantIds" options=participantOptions value=analysis.participantIds}}
+      {{> afQuickField name="stimulusIds" options=stimulusOptions value=analysis.stimulusIds}}
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
       {{/autoForm}}
 
-
       {{#if analysis.hasPermission 'destroy'}}
-        {{> quickRemoveButton collection="Analyses" _id=analysis._id
+      {{> quickRemoveButton collection="Analyses" _id=analysis._id
           onSuccess=deleteOnSuccess onError=deleteOnSuccess
           beforeRemove=deleteBeforeRemove
           id="destroyAnalysisform" class="btn btn-danger"}}
