create exports tab with analyses summary export for glance summary statistics

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -97,7 +97,7 @@
           <span class="label label-success">Processed</span>
           {{/if}}
         </td>
-        {{#if study.hasPermission 'update'}}
+        {{#if analysis.hasPermission 'destroy'}}
         <td>
           <span class="text-danger">
             <i
