--- a/client/pages/exports/Exports.html
+++ b/client/pages/exports/Exports.html
@@ -6,22 +6,22 @@
           <label for="exportType">Export Type</label>
           <select class="form-control export-type" id="exportType">
             <option disabled selected>Select...</option>
-            <option disabled value="allAnalysesSingle"
+            <option value="allAnalysesSingle"
               >All Analyses in Study - Single File</option
             >
             <option disabled vlaue="allAnalysesIndividual"
               >All Analyses in Study - Individual Files</option
             >
-            <option value="allParticipantsSingle"
+            <option disabled value="allParticipantsSingle"
               >All Participants in Analysis - Single File</option
             >
             <option disabled value="allParticipantsIndividual"
               >All Participants in Analysis - Individual Files</option
             >
-            <option value="allGlancesSingle"
+            <option disabled value="allGlancesSingle"
               >All Glances in Analysis (Convex Hull Data) - Single File</option
             >
-            <option value="allGlancesIndividual"
+            <option disabled value="allGlancesIndividual"
               >All Glances in Analysis (Convex Hull Data) - Individual
               Files</option
             >
