rename minGlanceDuration and maxGlanceGapDuration

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -68,10 +68,10 @@
           }}</a>
         </td>
         <td>
-          {{ analysis.minGlanceTime }}
+          {{ analysis.minGlanceDuration }}
         </td>
         <td>
-          {{ analysis.glanceGap }}
+          {{ analysis.maxGlanceGapDuration }}
         </td>
         <td>
           {{ analysis.participants.count }}
