--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -10,8 +10,8 @@
         class="update-analysis-form"}}
       {{> afQuickField name="name"}}
       {{> afQuickField name="desc"}}
-      {{> afQuickField name="minGlanceTime"}}
-      {{> afQuickField name="glanceGap"}}
+      {{> afQuickField name="minGlanceDuration"}}
+      {{> afQuickField name="maxGlanceGapDuration"}}
       <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
       {{> afQuickField name="ignoreOutsideImage"}}
       {{> afQuickField name="studyId"}}
