MGD parameter for ISO15007

--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -14,10 +14,10 @@
         <div class="col-xs-12 col-sm-6 col-md-4">
           {{> afQuickField name="type" class="typeSelector"}}
         </div>
-        {{#if showDurationFields}}
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            {{> afQuickField name="minGlanceDuration"}}
-          </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          {{> afQuickField name="minGlanceDuration"}}
+        </div>
+        {{#if showMGGDField}}
           <div class="col-xs-12 col-sm-6 col-md-4">
             {{> afQuickField name="maxGlanceGapDuration"}}
           </div>
