save aoiIds for blinks, fixations, gazepoints

--- a/client/pages/datafiles/datafile.html
+++ b/client/pages/datafiles/datafile.html
@@ -22,14 +22,6 @@
         </tr>
         <tr>
           <th>
-            Valid Coordinate Count:
-          </th>
-          <td class="p-l-10">
-            {{formatNumber datafile.integerRowCount}}
-          </td>
-        </tr>
-        <tr>
-          <th>
             Gaze Point Count:
           </th>
           <td class="p-l-10">
@@ -42,6 +34,22 @@
           </th>
           <td class="p-l-10">
             {{formatNumber datafile.fixationCount}}
+          </td>
+        </tr>
+        <tr>
+          <th>
+            Saccade Count:
+          </th>
+          <td class="p-l-10">
+            {{formatNumber datafile.saccadeCount}}
+          </td>
+        </tr>
+        <tr>
+          <th>
+            Blink Count:
+          </th>
+          <td class="p-l-10">
+            {{formatNumber datafile.blinkCount}}
           </td>
         </tr>
       </table>
