real analyses working, plots (animations) not working yet

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -103,8 +103,8 @@
           <span class="text-danger">
             <i
               class="fa fa-trash delete-analysis"
-              data-analysisId="{{ analysis._id }}"
-              data-analysisName="{{ analysis.name }}"
+              data-analysis-id="{{ analysis._id }}"
+              data-analysis-name="{{ analysis.name }}"
             ></i>
           </span>
         </td>
