--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -15,16 +15,19 @@
           {{> afQuickField name="type" class="typeSelector"}}
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
+          {{> afQuickField name="minFixationDuration"}}
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
           {{> afQuickField name="minVisitDuration"}}
         </div>
         {{#if showMGGDField}}
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            {{> afQuickField name="maxVisitGapDuration"}}
-          </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          {{> afQuickField name="maxVisitGapDuration"}}
+        </div>
         {{/if}}
       </div>
       <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
-      {{> afQuickField name="ignoreOutsideImage"}}
+      <!-- {{> afQuickField name="includeOutsideImage"}} -->
       {{> afQuickField name="studyId"}}
       {{> afQuickField name="participantIds" options=participantOptions value=participantIds}}
       {{> afQuickField name="stimulusIds" options=stimulusOptions value=stimulusIds}}
