--- a/client/pages/visits/Visits.html
+++ b/client/pages/visits/Visits.html
@@ -1,4 +1,4 @@
-<template name="Visits">
+<!-- <template name="Visits">
   {{#if Template.subscriptionsReady}}
   <div class="row">
     <div class="col-md-6 m-b-20">
@@ -187,4 +187,4 @@
   {{else}}
   {{> Spinner}}
   {{/if}}
-</template>
+</template> -->
