ready to make visitsgit add .

--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -113,4 +113,6 @@
   {{> tabular table=TabularTables.VisitsByAnalysisId selector=selector class="table table-striped table-bordered"}}
   {{/if}}
   {{/if}}
+
+  <h4>Eye events ({{ eyeevents.count }})</h4>
 </template>
