--- a/client/pages/participants/Participant.html
+++ b/client/pages/participants/Participant.html
@@ -1,29 +1,38 @@
 <template name="Participant">
   {{#if $.Session.get 'updateParticipant'}}
-    {{> UpdateParticipant participant=participant}}
+  {{> UpdateParticipant participant=participant}}
   {{else}}
-    <h3 class="m-t-0">{{participant.name}}
-      {{#if participant.hasPermission 'update'}}
-        {{#unless $.Session.get 'updateParticipant'}}
-          &nbsp;<a href="" class="update-participant"><i class="fa fa-pencil"></i></a>
-        {{/unless}}
-      {{/if}}
-    </h3>
-
-    {{#if participant.variables}}
-    <h4>Variables</h4>
-      <div class="well well-sm">
-        <table>
-          {{#each variable in participant.variables}}
-            <tr>
-              <th>{{variable.name}}: </th>
-              <td class="p-l-10">{{variable.value}}</td>
-            </tr>
-          {{/each}}
-        </table>
-      </div>
+  <h3 class="m-t-0">
+    {{ participant.name }}
+    {{#if participant.hasPermission 'update'}}
+    {{#unless $.Session.get 'updateParticipant'}}
+    &nbsp;<a href="" class="update-participant"><i class="fa fa-pencil"></i></a>
+    {{/unless}}
     {{/if}}
+  </h3>
 
-    <!-- <div>{{json participant}}</div> -->
+  {{#if participant.variables}}
+  <h4>Variables</h4>
+  <div class="well well-sm">
+    <table>
+      {{#each variable in participant.variables}}
+      <tr>
+        <th>{{ variable.name }}:</th>
+        <td class="p-l-10">{{ variable.value }}</td>
+      </tr>
+      {{/each}}
+    </table>
+  </div>
   {{/if}}
+
+  <!-- <div>{{json participant}}</div> -->
+  {{/if}}
+
+  <div>
+    <h4>
+      <a class="btn btn-primary" href="{{ participant._id }}/eyeevents">
+        <i class="fa fa-eye"></i>&nbsp;&nbsp;View All Eye Events
+      </a>
+    </h4>
+  </div>
 </template>
