update download button

--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -13,8 +13,8 @@
     <span class="btn btn-danger pull-right reprocess-analysis m-l-10"
       ><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analysis</span
     >
-    <span class="pull-right btn btn-success download-as-csv"
-      ><i class="fa fa-download"></i>&nbsp;Download Analysis as .CSV</span
+    <span class="pull-right btn btn-success save-csv-visits"
+      ><i class="fa fa-download"></i>&nbsp;Download Visits as .CSV</span
     >
     {{/if}}
 
