--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -43,7 +43,7 @@
           Min Visit (ms)
         </th>
         <th class="center">
-          Max Visit Gap (ms)
+          Max Fixation Gap
         </th>
         <th class="center">
           Participants
@@ -84,7 +84,7 @@
           {{ analysis.minVisitDuration }}
         </td>
         <td class="center">
-          {{ analysis.maxVisitGapDuration }}
+          {{ analysis.maxFixationGap }}
         </td>
         <td class="center">
           {{ analysis.participants.count }}
