--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -36,10 +36,10 @@
   </div>
   {{/if}}
 
-  {{#if analysis.maxVisitGapDuration}}
+  {{#if analysis.maxFixationGap}}
   <div>
-    <strong>Maximum Visit Gap Duration (ms):</strong>
-    {{formatNumber analysis.maxVisitGapDuration}}
+    <strong>Maximum Fixation Gap:</strong>
+    {{formatNumber analysis.maxFixationGap}}
   </div>
   {{/if}}
 
