--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -12,22 +12,15 @@
       {{> afQuickField name="desc"}}
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4">
-          {{> afQuickField name="type" class="typeSelector"}}
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
           {{> afQuickField name="minFixationDuration"}}
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           {{> afQuickField name="minVisitDuration"}}
         </div>
-        {{#if showMGGDField}}
         <div class="col-xs-12 col-sm-6 col-md-4">
-          {{> afQuickField name="maxVisitGapDuration"}}
+          {{> afQuickField name="maxFixationGap"}}
         </div>
-        {{/if}}
       </div>
-      <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
-      <!-- {{> afQuickField name="includeOutsideImage"}} -->
       {{> afQuickField name="studyId"}}
       {{> afQuickField name="participantIds" options=participantOptions value=participantIds}}
       {{> afQuickField name="stimulusIds" options=stimulusOptions value=stimulusIds}}
