clean up export buttons (still need to finish exports)

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -14,8 +14,8 @@
     <span class="btn btn-danger pull-right reprocess-analyses m-l-10"
       ><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analyses</span
     >
-    <span class="pull-right btn btn-success download-as-csv"
-      ><i class="fa fa-download"></i>&nbsp;Download Analyses as .CSVs</span
+    <span class="pull-right btn btn-success export-summary"
+      ><i class="fa fa-share-square-o"></i>&nbsp;Export Analyses Summary</span
     >
     {{/if}}
     {{/if}}
