--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -13,9 +13,6 @@
     <span class="btn btn-danger pull-right reprocess-analysis m-l-10"
       ><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analysis</span
     >
-    <span class="pull-right btn btn-success save-csv-visits"
-      ><i class="fa fa-download"></i>&nbsp;Download Visits as .CSV</span
-    >
     {{/if}}
 
     {{#if equals analysis.status 'processing'}}
@@ -108,6 +105,15 @@
       ></i
     ></span>
     {{/unless}}
+
+    <span
+      class="pull-right btn btn-success export-participants-summary m-b-10 m-l-10"
+      ><i class="fa fa-share-square-o"></i>&nbsp;Export Participants
+      Summary</span
+    >
+    <span class="pull-right btn btn-success export-visits-summary m-b-10"
+      ><i class="fa fa-share-square-o"></i>&nbsp;Export Visits Summary</span
+    >
   </h4>
   {{> tabular table=TabularTables.VisitsByAnalysisId selector=selector class="table table-striped table-bordered"}}
 
