rename maxFixationGap -> maxOffTargetFixations

--- a/client/pages/analyses/AnalysesList.html
+++ b/client/pages/analyses/AnalysesList.html
@@ -34,13 +34,13 @@
           Name
         </th>
         <th class="center">
-          Min Fixation (ms)
+          Min Fixation Duration(ms)
         </th>
         <th class="center">
-          Min Visit (ms)
+          Min Visit Duration (ms)
         </th>
         <th class="center">
-          Max Fixation Gap
+          Max Off-Target Fixations
         </th>
         <th class="center">
           Participants
@@ -78,7 +78,7 @@
           {{ analysis.minVisitDuration }}
         </td>
         <td class="center">
-          {{ analysis.maxFixationGap }}
+          {{ analysis.maxOffTargetFixations }}
         </td>
         <td class="center">
           {{ analysis.participants.count }}
