--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -38,7 +38,7 @@
 
   <div>
     <strong>Maximum Off-Target Fixations:</strong>
-    {{formatNumber analysis.maxFixationGap}}
+    {{formatNumber analysis.maxOffTargetFixations}}
   </div>
 
   <div class="selector-set">
