--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -18,7 +18,7 @@
           {{> afQuickField name="minVisitDuration"}}
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
-          {{> afQuickField name="maxFixationGap"}}
+          {{> afQuickField name="maxOffTargetFixations"}}
         </div>
       </div>
       {{> afQuickField name="studyId"}}
