--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -1,21 +1,15 @@
 <template name="Analysis">
-  {{#if $.Session.get 'updateAnalysis'}}
-  {{> UpdateAnalysis analysis=analysis}}
+  {{#if $.Session.get 'updateAnalysis'}} {{> UpdateAnalysis analysis=analysis}}
   {{else}}
   <h3 class="m-t-0">
-    {{ analysis.name }}
-    {{#if Template.subscriptionsReady}}
-    {{#if analysis.hasPermission 'update'}}
-    {{#unless $.Session.get 'updateAnalysis'}}
+    {{ analysis.name }} {{#if Template.subscriptionsReady}} {{#if
+    analysis.hasPermission 'update'}} {{#unless $.Session.get 'updateAnalysis'}}
     &nbsp;<a href="" class="update-analysis"><i class="fa fa-pencil"></i></a>
-    {{/unless}}
-    {{/if}}
+    {{/unless}} {{/if}}
     <span class="btn btn-danger pull-right reprocess-analysis m-l-10"
       ><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analysis</span
     >
-    {{/if}}
-
-    {{#if equals analysis.status 'processing'}}
+    {{/if}} {{#if equals analysis.status 'processing'}}
     <span class="label label-default"
       >Creating Visits {{formatNumber analysis.jobsProgress}}%<i
         class="fa fa-spinner fa-pulse fa-fw m-l-3"
@@ -97,9 +91,8 @@
   {{/if}}
 
   <h4>
-    Visits ({{ visits.count }})
-
-    {{#unless analysis.allJobsCompleted}}
+    Visits ({{ formatNumber visits.count }}) {{#unless
+    analysis.allJobsCompleted}}
     <span class="label label-default"
       >Creating Visits {{formatNumber analysis.jobsProgress}}%<i
         class="fa fa-spinner fa-pulse fa-fw m-l-3"
@@ -116,7 +109,6 @@
       ><i class="fa fa-share-square-o"></i>&nbsp;Export Visits Summary</span
     >
   </h4>
-  {{> tabular table=TabularTables.VisitsByAnalysisId selector=selector class="table table-striped table-bordered"}}
-
-  {{/if}}
+  {{> tabular table=TabularTables.VisitsByAnalysisId selector=selector
+  class="table table-striped table-bordered"}} {{/if}}
 </template>
